--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     </div>
   </div>
 </nav>
-    <div class="d-flex align-items-center">
-  <strong role="status">Loading...</strong>
-  <div class="spinner-border ms-auto" aria-hidden="true"></div>
+    <div class="alert alert-primary" role="alert">
+  this site is in progress
 </div>
-    <h1>! work under progress !</h1>
+    <h1>Welcome to kelaskaryabersama</h1>
+    <button type="button" class="btn btn-primary btn-lg">Learn</button>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
