--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </div>
 </nav>
     <div class="alert alert-primary" role="alert">
-  hello web project teammates, This site is in progress. you would not open any tabs in navbar
+  hello ms. dyani, welcome to my website
 </div>
     <h1>Welcome to kelaskaryabersama</h1>
     <button type="button" class="btn btn-primary btn-lg">Learn</button>
