--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </div>
 </nav>
     <div class="alert alert-primary" role="alert">
-  hello ms. dyani, welcome to my website
+  Website ini masih dibikin, biar jadi web paling GG
 </div>
     <h1>Welcome to kelaskaryabersama</h1>
     <button type="button" class="btn btn-primary btn-lg">Learn</button>
