--- a/index.html
+++ b/index.html
@@ -45,11 +45,34 @@
     </div>
   </div>
 </nav>
-    <div class="alert alert-primary" role="alert">
-  Website ini masih dibikin, biar jadi web paling GG
+    <div class="alert alert-primary d-flex align-items-center" role="alert">
+  <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
+    <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+  </svg>
+  <div>
+    website ini masih dalam pembuatan biar jadi web paling gege sedunia
+  </div>
 </div>
     <h1>Welcome to kelaskaryabersama</h1>
-    <button type="button" class="btn btn-primary btn-lg">Learn</button>
+    <div class="d-grid gap-2">
+  <button class="btn btn-primary" type="button">Learn</button>
+</div>
+    <div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Scratch</h5>
+    <p class="card-text">World's easiest and most exciting open source coding for kids</p>
+    <a href="#" class="btn btn-primary">Learn</a>
+  </div>
+</div>
+    <div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">HTML</h5>
+    <p class="card-text">world's most-used coding language and basic code for websites.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
