--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <div class="d-grid gap-2">
   <button class="btn btn-primary" type="button">Learn</button>
 </div>
+    <h2>Learn</h2>
     <div class="card" style="width: 18rem;">
   <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
@@ -61,6 +62,7 @@
     <a href="#" class="btn btn-primary">Learn</a>
   </div>
 </div>
+    <h2>Advanced</h2>
     <div class="card" style="width: 18rem;">
   <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
