--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
   <button class="btn btn-primary" type="button">Learn</button>
 </div>
     <h2>Learn</h2>
+    <h4>Easy</h4>
     <div class="card" style="width: 18rem;">
   <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
@@ -62,13 +63,13 @@
     <a href="#" class="btn btn-primary">Learn</a>
   </div>
 </div>
-    <h2>Advanced</h2>
+    <h4>Advanced</h4>
     <div class="card" style="width: 18rem;">
   <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">HTML</h5>
     <p class="card-text">world's most-used coding language and basic code for websites.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="#" class="btn btn-primary">Learn</a>
   </div>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
