--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a class="dropdown-item" href="#">classes</a></li>
              <li><a class="dropdown-item" href="#">projects</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Scratch.mit.edu</a></li>
+            <li><a class="dropdown-item" href="https://Scratch.mit.edu/users/kelaskaryabersama/">Scratch.mit.edu</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -60,7 +60,7 @@
   <div class="card-body">
     <h5 class="card-title">Scratch</h5>
     <p class="card-text">World's easiest and most exciting open source coding for kids</p>
-    <a href="#" class="btn btn-primary">Learn</a>
+    <a href="https://Scratch.mit.edu/users/kelaskaryabersama/" class="btn btn-primary">Learn</a>
   </div>
 </div>
     <h4> Advanced</h4>
@@ -69,16 +69,16 @@
   <div class="card-body">
     <h5 class="card-title">HTML</h5>
     <p class="card-text">world's most-used coding language and basic code for websites.</p>
-    <a href="#" class="btn btn-primary">Learn</a>
+    <a href="https://Github.com/" class="btn btn-primary">Learn</a>
   </div>
 </div>
       <div class="card" style="width: 18rem;">
   <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Bootstrap</h5>
-    <p class="card-text">Build fast, responsive sites with Bootstrap
+    <p class="card-text">Build fast, responsive sites with Bootstrap. 
 Powerful, extensible, and feature-packed frontend toolkit. Build and customize with Sass, utilize prebuilt grid system and components, and bring projects to life with powerful JavaScript plugins.</p>
-    <a href="#" class="btn btn-primary">Learn</a>
+    <a href="https://getbootstrap.com/docs/5.3" class="btn btn-primary">Open</a>
   </div>
 </div>
 <a class="btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
@@ -100,6 +100,14 @@ Powerful, extensible, and feature-packed frontend toolkit. Build and customize w
       </button>
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="#">Login</a></li>
+        <div class="form-floating mb-3">
+  <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+  <label for="floatingInput">Email address</label>
+</div>
+<div class="form-floating">
+  <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+  <label for="floatingPassword">Password</label>
+</div>
         <li><a class="dropdown-item" href="#">Learn</a></li>
         <li><a class="dropdown-item" href="#">projects</a></li>
       </ul>
