--- a/home.index.html
+++ b/home.index.html
@@ -10,7 +10,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Kelaskaryabersama</a>
-    <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -38,11 +37,13 @@
           <a class="nav-link disabled" aria-disabled="true">pro</a>
         </li>
       </ul>
+<a class="btn btn-primary" href="#" role="button">sign in</a>
       <div class="dropdown">
   <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-    Dropdown button
+    log in
   </button>
   <ul class="dropdown-menu">
+    <h4>Log in</h4>
 <div class="form-floating mb-3">
   <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
   <label for="floatingInput">Email address</label>
@@ -51,6 +52,7 @@
   <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
   <label for="floatingPassword">Password</label>
 </div>
+    <button type="button" class="btn btn-light">Log in</button>
   </ul>
 </div>
       <form class="d-flex" role="search">
@@ -107,22 +109,13 @@ Powerful, extensible, and feature-packed frontend toolkit. Build and customize w
   </div>
   <div class="offcanvas-body">
     <div>
-      -
+      Here are pages of our website 
     </div>
     <div class="dropdown mt-3">
       <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
         pages
       </button>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Login</a></li>
-        <div class="form-floating mb-3">
-  <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-  <label for="floatingInput">Email address</label>
-</div>
-<div class="form-floating">
-  <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-  <label for="floatingPassword">Password</label>
-</div>
         <li><a class="dropdown-item" href="#">Learn</a></li>
         <li><a class="dropdown-item" href="#">projects</a></li>
       </ul>
