--- a/home.index.html
+++ b/home.index.html
@@ -71,7 +71,7 @@
     <div class="d-grid gap-2">
   <button class="btn btn-primary" type="button">Learn</button>
 </div>
-    <h2> Learn</h2>
+    <h2> sites for learning</h2>
     <h4> Easy</h4>
     <div class="card" style="width: 18rem;">
   <img src="..." class="card-img-top" alt="...">
