--- a/home.index.html
+++ b/home.index.html
@@ -37,7 +37,7 @@
           <a class="nav-link disabled" aria-disabled="true">pro</a>
         </li>
       </ul>
-      <a class="btn btn-primary" href="sign_in.sign-in.html" role="button">sign in</a>
+      <a class="btn btn-primary" href="#" role="button">sign in</a>
 <a class="btn btn-primary" href="#" role="button">log in</a>
       <div class="dropdown">
   <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
