--- a/home.html
+++ b/home.html
@@ -138,7 +138,49 @@
   <strong>warning!</strong> this site is in construction.
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
-    
+    <h1>Welcome to Kelaskaryabersama</h1>
+    <h5>learning sites</h5>
+    <div class="card text-center">
+  <div class="card-header">
+    Featured
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Scratch.mit.edu</h5>
+    <p class="card-text">Create stories, games, and animations
+Share with others around the world
+.</p>
+    <a href="https://scratch.mit.edu/" class="btn btn-primary">open</a>
+  </div>
+  <div class="card-footer text-body-secondary">
+    26 august 2023
+  </div>
+</div>
+     <div class="card text-center">
+  <div class="card-header">
+    Featured
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Html</h5>
+    <p class="card-text">make websites with world's most used coding language.</p>
+    <a href="https://github.com/" class="btn btn-primary">Go to Github</a>
+  </div>
+  <div class="card-footer text-body-secondary">
+    26 august 2023
+  </div>
+</div>
+     <div class="card text-center">
+  <div class="card-header">
+    Featured
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Bootstrap</h5>
+    <p class="card-text">world's most complete code library for html and javascript.</p>
+    <a href="#" class="btn btn-primary">open</a>
+  </div>
+  <div class="card-footer text-body-secondary">
+    26 august 2023
+  </div>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
