--- a/home.html
+++ b/home.html
@@ -140,6 +140,31 @@
 </div>
     <h1>Welcome to Kelaskaryabersama</h1>
     <h5>learning sites</h5>
+<button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+open offcanvas
+</button>
+
+<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    <div>
+      Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists, etc.
+    </div>
+    <div class="dropdown mt-3">
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
+        Dropdown button
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#">Action</a></li>
+        <li><a class="dropdown-item" href="#">Another action</a></li>
+        <li><a class="dropdown-item" href="#">Something else here</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
     <div class="card text-center">
   <div class="card-header">
     Featured
@@ -175,7 +200,7 @@ Share with others around the world
   <div class="card-body">
     <h5 class="card-title">Bootstrap</h5>
     <p class="card-text">world's most complete code library for html and javascript.</p>
-    <a href="#" class="btn btn-primary">open</a>
+    <a href="https://getbootstrap.com" class="btn btn-primary">open</a>
   </div>
   <div class="card-footer text-body-secondary">
     26 august 2023
