--- a/home.html
+++ b/home.html
@@ -170,6 +170,7 @@ open offcanvas
     Featured
   </div>
   <div class="card-body">
+    <img src="..." class="img-thumbnail" alt="...">
     <h5 class="card-title">Scratch.mit.edu</h5>
     <p class="card-text">Create stories, games, and animations
 Share with others around the world
