--- a/home.html
+++ b/home.html
@@ -99,7 +99,7 @@
   </div>
 </form>
       <div class="modal-body">
-        ...
+        
       </div>
       <div class="modal-footer">
         <h5>sign in</h5>
@@ -170,7 +170,7 @@ open offcanvas
     Featured
   </div>
   <div class="card-body">
-    <img src="..." class="img-thumbnail" alt="...">
+    <img src="yggou.png" class="img-thumbnail" alt="scratch">
     <h5 class="card-title">Scratch.mit.edu</h5>
     <p class="card-text">Create stories, games, and animations
 Share with others around the world
