--- a/home.html
+++ b/home.html
@@ -170,7 +170,7 @@ open offcanvas
     Featured
   </div>
   <div class="card-body">
-    <img src="yggou.png" class="img-thumbnail" alt="scratch">
+    <img src="yggou.png" class="img-thumbnail" alt="yggou">
     <h5 class="card-title">Scratch.mit.edu</h5>
     <p class="card-text">Create stories, games, and animations
 Share with others around the world
@@ -186,7 +186,7 @@ Share with others around the world
     Featured
   </div>
   <div class="card-body">
-    <h5 class="card-title">Html</h5>
+    <h5 class="card-title">github</h5>
     <p class="card-text">make websites with world's most used coding language.</p>
     <a href="https://github.com/" class="btn btn-primary">Go to Github</a>
   </div>
