--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <img src="kelaskaryabersama2-al.jpg" class="img-thumbnail" alt="kelsakaryabersama2-al">
     <title>home|kelaskaryabersama.com</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   </head>
@@ -165,46 +166,28 @@ open offcanvas
     </div>
   </div>
 </div>
-    <div class="card text-center">
-  <div class="card-header">
-    Featured
+    <div class="row">
+  <div class="col-sm-6 mb-3 mb-sm-0">
+    <div class="card">
+      <div class="card-body">
+        <h6>featured</h6>
+        <img src="yggou.png" class="img-thumbnail" alt="yggou">
+        <h5 class="card-title">Scratch</h5>
+        <p class="card-text">imagine, program, share with world's biggest free open source coding platform for kids.</p>
+        <a href="https://scratch.mit.edu" class="btn btn-primary">Open</a>
+      </div>
+    </div>
   </div>
-  <div class="card-body">
-    <img src="yggou.png" class="img-thumbnail" alt="yggou">
-    <h5 class="card-title">Scratch.mit.edu</h5>
-    <p class="card-text">Create stories, games, and animations
-Share with others around the world
-.</p>
-    <a href="https://scratch.mit.edu/" class="btn btn-primary">open</a>
-  </div>
-  <div class="card-footer text-body-secondary">
-    26 august 2023
-  </div>
-</div>
-     <div class="card text-center">
-  <div class="card-header">
-    Featured
-  </div>
-  <div class="card-body">
-    <h5 class="card-title">github</h5>
-    <p class="card-text">make websites with world's most used coding language.</p>
-    <a href="https://github.com/" class="btn btn-primary">Go to Github</a>
-  </div>
-  <div class="card-footer text-body-secondary">
-    26 august 2023
-  </div>
-</div>
-     <div class="card text-center">
-  <div class="card-header">
-    Featured
-  </div>
-  <div class="card-body">
-    <h5 class="card-title">Bootstrap</h5>
-    <p class="card-text">world's most complete code library for html and javascript.</p>
-    <a href="https://getbootstrap.com" class="btn btn-primary">open</a>
-  </div>
-  <div class="card-footer text-body-secondary">
-    26 august 2023
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h6>featured</h6>
+        <img src="..." class="img-thumbnail" alt="...">
+        <h5 class="card-title">Github</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
   </div>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
