--- a/home.html
+++ b/home.html
@@ -182,10 +182,34 @@ open offcanvas
     <div class="card">
       <div class="card-body">
         <h6>featured</h6>
-        <img src="..." class="img-thumbnail" alt="...">
+        <img src="github.png" class="img-thumbnail" alt="github">
         <h5 class="card-title">Github</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <a href="https://github.com" class="btn btn-primary">open</a>
+      </div>
+    </div>
+  </div>
+</div>
+        <div class="row">
+  <div class="col-sm-6 mb-3 mb-sm-0">
+    <div class="card">
+      <div class="card-body">
+        <h6>featured</h6>
+        <img src=".png" class="img-thumbnail" alt="">
+        <h5 class="card-title">Bootstrap</h5>
+        <p class="card-text">Build fast, responsive sites with bootstrap.</p>
+        <a href="https://getbootstrap.com" class="btn btn-primary">Open</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h6>deploy</h6>
+        <img src=".png" class="img-thumbnail" alt="">
+        <h5 class="card-title">netlify</h5>
+        <p class="card-text">deploy and publish sites with netlify.</p>
+        <a href="https://netlify.app" class="btn btn-primary">open</a>
       </div>
     </div>
   </div>
