--- a/home.html
+++ b/home.html
@@ -195,7 +195,7 @@ open offcanvas
     <div class="card">
       <div class="card-body">
         <h6>featured</h6>
-        <img src=".png" class="img-thumbnail" alt="">
+        <img src="bootstrap.png" class="img-thumbnail" alt="bootstrap">
         <h5 class="card-title">Bootstrap</h5>
         <p class="card-text">Build fast, responsive sites with bootstrap.</p>
         <a href="https://getbootstrap.com" class="btn btn-primary">Open</a>
@@ -206,7 +206,7 @@ open offcanvas
     <div class="card">
       <div class="card-body">
         <h6>deploy</h6>
-        <img src=".png" class="img-thumbnail" alt="">
+        <img src="netlify.png" class="img-thumbnail" alt="netlify">
         <h5 class="card-title">netlify</h5>
         <p class="card-text">deploy and publish sites with netlify.</p>
         <a href="https://netlify.app" class="btn btn-primary">open</a>
@@ -214,6 +214,7 @@ open offcanvas
     </div>
   </div>
 </div>
+    <h5>recommendations</h5>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
