--- a/home.html
+++ b/home.html
@@ -226,6 +226,30 @@ open tabs
   </div>
 </div>
     <h5>recommendations</h5>
+        <div class="row">
+  <div class="col-sm-6 mb-3 mb-sm-0">
+    <div class="card">
+      <div class="card-body">
+        <h6>learn</h6>
+        <img src="ixl.png" class="img-thumbnail" alt="ixl">
+        <h5 class="card-title">ixl</h5>
+        <p class="card-text">learn maths, language arts, science, and social studies with ixl.</p>
+        <a href="https://ixl.com" class="btn btn-primary">Open</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h6>play</h6>
+        <img src=".jpeg" class="img-thumbnail" alt="">
+        <h5 class="card-title">ABCya</h5>
+        <p class="card-text">play fun educational games in abcya.</p>
+        <a href="https://abcya.com" class="btn btn-primary">open</a>
+      </div>
+    </div>
+  </div>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
