--- a/home.html
+++ b/home.html
@@ -242,7 +242,7 @@ open tabs
     <div class="card">
       <div class="card-body">
         <h6>play</h6>
-        <img src=".jpeg" class="img-thumbnail" alt="">
+        <img src="abcya.jpeg" class="img-thumbnail" alt="abcya">
         <h5 class="card-title">ABCya</h5>
         <p class="card-text">play fun educational games in abcya.</p>
         <a href="https://abcya.com" class="btn btn-primary">open</a>
