--- a/home.html
+++ b/home.html
@@ -242,7 +242,7 @@ open tabs
     <div class="card">
       <div class="card-body">
         <h6>play</h6>
-        <img src="abcya.jpeg" class="img-thumbnail" alt="abcya">
+        <img src="abcya.jpg" class="img-thumbnail" alt="abcya">
         <h5 class="card-title">ABCya</h5>
         <p class="card-text">play fun educational games in abcya.</p>
         <a href="https://abcya.com" class="btn btn-primary">open</a>
@@ -250,6 +250,7 @@ open tabs
     </div>
   </div>
 </div>
+    <h7>©kelaskaryabersama  kelaskaryabersama is a member of riangkelana group. 🌞Riangkelana</h7>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
