--- a/home.html
+++ b/home.html
@@ -195,7 +195,7 @@ open tabs
         <h6>featured</h6>
         <img src="github.png" class="img-thumbnail" alt="github">
         <h5 class="card-title">Github</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <p class="card-text">code with world's most used codes, like HTML, Java, C, and PHP.</p>
         <a href="https://github.com" class="btn btn-primary">open</a>
       </div>
     </div>
