--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>home|kelaskaryabersama.com</title>
+    <title>home | kelaskaryabersama.com</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   </head>
   <body>
@@ -250,7 +250,11 @@ open tabs
     </div>
   </div>
 </div>
-    <h7>©kelaskaryabersama  kelaskaryabersama is a member of riangkelana group. 🌞Riangkelana</h7>
+    <div class="text-bg-dark p-3">________________________________________________________________________________________</div>
+    <div class="text-bg-dark p-3">kelaskaryabersama.netlify.app</div>
+    <div class="text-bg-dark p-3">made with github</div>
+    <div class="text-bg-dark p-3">deployed with netlify</div>
+    <div class="text-bg-dark p-3">code reference from bootstrap</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
