--- a/home.html
+++ b/home.html
@@ -138,19 +138,19 @@
   <strong>warning!</strong> this site is in construction.
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
+    <h1>Welcome to Kelaskaryabersama</h1>
+    <h5>learning sites</h5>
     <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
   <div class="toast-header">
     <img src="github.png" class="rounded me-2" alt="github">
-    <strong class="me-auto">recommendations</strong>
-    <small class="text-body-secondary">27 august 2023</small>
+    <strong class="me-auto">github</strong>
+    <small>now</small>
     <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
   </div>
   <div class="toast-body">
     welcome to recommendations wall!
   </div>
 </div>
-    <h1>Welcome to Kelaskaryabersama</h1>
-    <h5>learning sites</h5>
 <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
 open tabs
 </button>
@@ -250,8 +250,6 @@ open tabs
     </div>
   </div>
 </div>
-    <div class="text-bg-dark p-3">________________________________________________________________________________________</div>
-    <div class="text-bg-dark p-3">kelaskaryabersama.netlify.app</div>
     <div class="text-bg-dark p-3">made with github</div>
     <div class="text-bg-dark p-3">deployed with netlify</div>
     <div class="text-bg-dark p-3">code reference from bootstrap</div>
