--- a/home.html
+++ b/home.html
@@ -162,6 +162,7 @@ open tabs
   </div>
   <div class="offcanvas-body">
     <div>
+      <img src="kelaskaryabersama2-al.jpg" class="img-thumbnail" alt="kelaskaryabersama2-al">
       <img src="ComputerProgramming16x9.jpg" class="img-thumbnail" alt="ComputerProgramming16x9">
       Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists, etc.
     </div>
