--- a/home.html
+++ b/home.html
@@ -164,7 +164,11 @@ open tabs
     <div>
       <img src="kelaskaryabersama2-al.jpg" class="img-thumbnail" alt="kelaskaryabersama2-al">
       <img src="ComputerProgramming16x9.jpg" class="img-thumbnail" alt="ComputerProgramming16x9">
-      Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists, etc.
+      <div class="form-floating">
+  <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+  <label for="floatingTextarea2">Comments</label>
+</div>
+    kelaskaryabersama.com
     </div>
     <div class="dropdown mt-3">
       <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
@@ -176,6 +180,13 @@ open tabs
         <li><a class="dropdown-item" href="#">Something else here</a></li>
       </ul>
     </div>
+    <button type="button" class="btn btn-primary position-relative">
+  messages
+  <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+    10
+    <span class="visually-hidden">unread messages</span>
+  </span>
+</button>
   </div>
 </div>
     <div class="row">
