--- a/home.html
+++ b/home.html
@@ -195,7 +195,7 @@ open tabs
     <div class="card">
       <div class="card-body">
         <h6>featured</h6>
-        <img src="yggou.png" class="img-thumbnail" alt="yggou">
+        <img src="scratch.png" class="img-thumbnail" alt="scratch">
         <h5 class="card-title">Scratch</h5>
         <p class="card-text">imagine, program, share with world's biggest free open source coding platform for kids.</p>
         <a href="https://scratch.mit.edu" class="btn btn-primary">Open</a>
