--- a/home.html
+++ b/home.html
@@ -190,6 +190,30 @@ open tabs
 </button>
   </div>
 </div>
+    <div id="carouselExample" class="carousel slide">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="kelaskaryabersama2-al.jpg" class="d-block w-100" alt="kelaskaryabersama2-al">
+    </div>
+    <div class="carousel-item">
+      <img src="yggou.png" class="d-block w-100" alt="yggou">
+    </div>
+    <div class="carousel-item">
+      <img src="html.png" class="d-block w-100" alt="html">
+    </div>
+    <div class="carousel-item">
+      <img src="iss066e.png" class="d-block w-100" alt="iss066e">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
     <div class="row">
   <div class="col-sm-6 mb-3 mb-sm-0">
     <div class="card">
