--- a/home.html
+++ b/home.html
@@ -192,18 +192,15 @@ open tabs
 </div>
     <div id="carouselExample" class="carousel slide">
   <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="kelaskaryabersama2-al.jpg" class="d-block w-100" alt="kelaskaryabersama2-al">
-    </div>
     <div class="carousel-item">
       <img src="yggou.png" class="d-block w-100" alt="yggou">
     </div>
     <div class="carousel-item">
-      <img src="html.png" class="d-block w-100" alt="html">
-    </div>
-    <div class="carousel-item">
       <img src="iss066e.png" class="d-block w-100" alt="iss066e">
     </div>
+    <div class="carousel-item">
+      <img src="scratch.png" class="d-block w-100" alt="scratch">
+    <div class="carousel-item">
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
