--- a/home.html
+++ b/home.html
@@ -196,7 +196,7 @@ open tabs
       <img src="yggou.png" class="d-block w-100" alt="yggou">
     </div>
     <div class="carousel-item">
-      <img src="iss066e.png" class="d-block w-100" alt="iss066e">
+      <img src="iss066e.jpeg" class="d-block w-100" alt="iss066e">
     </div>
     <div class="carousel-item">
       <img src="scratch.png" class="d-block w-100" alt="scratch">
