--- a/home.html
+++ b/home.html
@@ -190,7 +190,7 @@ open tabs
 </button>
   </div>
 </div>
-    <div id="carouselExample" class="carousel slide">
+    <div id="slide" class="carousel slide">
   <div class="carousel-inner">
     <div class="carousel-item">
       <img src="yggou.png" class="d-block w-100" alt="yggou">
