--- a/home.html
+++ b/home.html
@@ -95,7 +95,7 @@
     </div>
   </div>
   <div class="col-12">
-    <button class="btn btn-primary" type="submit">Submit</button>
+    <a class="btn btn-primary" href="learn-kkb.netlify.app" role="button">Link</a>
   </div>
 </form>
       <div class="modal-body">
@@ -124,7 +124,7 @@
   <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
   <label for="floatingPassword">Password</label>
 </div>
-            <button type="button" class="btn btn-link">submit</button>
+            <a class="btn btn-primary" href="learn-kkb.netlify.app" role="button">submit</a>
           </ul>
         </li>
       <form class="d-flex" role="search">
