--- a/home.html
+++ b/home.html
@@ -95,7 +95,7 @@
     </div>
   </div>
   <div class="col-12">
-    <a class="btn btn-primary" href="learn-kkb.netlify.app" role="button">Link</a>
+    <a class="btn btn-primary" href="learn-kkb.netlify.app" role="button">submit</a>
   </div>
 </form>
       <div class="modal-body">
@@ -135,6 +135,9 @@
   </div>
 </nav>
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cone" viewBox="0 0 16 16">
+  <path d="M7.03 1.88c.252-1.01 1.688-1.01 1.94 0l2.905 11.62H14a.5.5 0 0 1 0 1H2a.5.5 0 0 1 0-1h2.125L7.03 1.88z"/>
+</svg>
   <strong>warning!</strong> this site is in construction.
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
