Update and rename home.html to index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Learn</a>
+          <a class="nav-link" href="#learn">Learn</a>
         </li>
         <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -67,10 +67,12 @@
     </div>
   </div>
   <div class="col-md-3">
-    <label for="validationCustom04" class="form-label">State</label>
+    <label for="validationCustom04" class="form-label">province</label>
     <select class="form-select" id="validationCustom04" required>
       <option selected disabled value="">Choose...</option>
-      <option>...</option>
+      <option>east borneo</option>
+      <option>jakarta</option>
+      <option>west java</option>
     </select>
     <div class="invalid-feedback">
       Please select a valid state.
@@ -87,7 +89,7 @@
     <div class="form-check">
       <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
       <label class="form-check-label" for="invalidCheck">
-        Agree to terms and conditions
+        I Agree to terms and conditions
       </label>
       <div class="invalid-feedback">
         You must agree before submitting.
@@ -95,14 +97,17 @@
     </div>
   </div>
   <div class="col-12">
-    <a class="btn btn-primary" href="learn-kkb.netlify.app" role="button">submit</a>
+    <a class="btn btn-primary" href="#learn" role="button">submit</a>
   </div>
 </form>
       <div class="modal-body">
         
       </div>
       <div class="modal-footer">
-        <h5>sign in</h5>
+       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
+  <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+</svg>
       </div>
     </div>
   </div>
@@ -124,7 +129,7 @@
   <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
   <label for="floatingPassword">Password</label>
 </div>
-            <a class="btn btn-primary" href="learn-kkb.netlify.app" role="button">submit</a>
+            <a class="btn btn-primary" href="#learn" role="button">submit</a>
           </ul>
         </li>
       <form class="d-flex" role="search">
