--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#learn">Learn</a>
+          <a class="nav-link" href="learn">Learn</a>
         </li>
         <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -97,7 +97,7 @@
     </div>
   </div>
   <div class="col-12">
-    <a class="btn btn-primary" href="#learn" role="button">submit</a>
+    <a class="btn btn-primary" href="learn" role="button">submit</a>
   </div>
 </form>
       <div class="modal-body">
@@ -129,7 +129,7 @@
   <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
   <label for="floatingPassword">Password</label>
 </div>
-            <a class="btn btn-primary" href="#learn" role="button">submit</a>
+            <a class="btn btn-primary" href="learn" role="button">submit</a>
           </ul>
         </li>
       <form class="d-flex" role="search">
