--- a/learn/index.html
+++ b/learn/index.html
@@ -60,6 +60,13 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+    <h1>You have to sign in before entering learning page</h1>
+    <div class="form-check">
+  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+  <label class="form-check-label" for="flexCheckDefault">
+    OK
+  </label>
+</div>
 <form class="row g-3">
   <div class="col-md-6">
     <label for="inputEmail4" class="form-label">Email</label>
