--- a/learn/index.html
+++ b/learn/index.html
@@ -91,7 +91,8 @@
   <div class="col-md-4">
     <label for="inputState" class="form-label">province</label>
     <select id="inputState" class="form-select">
-      <option selected>east borneo</option>
+      <option selected>default</option>
+      <option>east borneo</option>
       <option>jakarta</option>
       <option>lund</option>
       <option>new york</option>
@@ -99,6 +100,29 @@
       <option>billund</option>
       <option>iskandar puteri</option>
       <option>singapore</option>
+      <option>london</option>
+      <option>mecca</option>
+      <option>dubai</option>
+      <option>cairo</option>
+      <option>moscow</option>
+      <option>mexico city</option>
+      <option>paris</option>
+      <option>lisbon</option>
+      <option>madrid</option>
+      <option>astana</option>
+      <option>berlin</option>
+      <option>luxembourg (city)</option>
+      <option>asia</option>
+      <option>africa</option>
+      <option>europe</option>
+      <option>north america</option>
+      <option>south america</option>
+      <option>antartica</option>
+      <option>the world</option>
+      <option>the solar system</option>
+      <option>the milkyway galaxy</option>
+      <option>the laniakea supercluster</option>
+      <option>the universe</option>
     </select>
   </div>
   <div class="col-md-2">
@@ -117,6 +141,7 @@
     <button type="submit" class="btn btn-primary" href="#" >Sign in</button>
   </div>
 </form>
+    <a class="btn btn-primary" href="#" role="button">proceed</a>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
