--- a/learn/index.html
+++ b/learn/index.html
@@ -141,7 +141,8 @@
     <button type="submit" class="btn btn-primary" href="#" >Sign in</button>
   </div>
 </form>
-    <a class="btn btn-primary" href="#" role="button">proceed</a>
+    <h6>if your done, click proceed</h6>
+    <a class="btn btn-outline-success" href="#" role="button">proceed</a>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
