--- a/learn/index.html
+++ b/learn/index.html
@@ -142,7 +142,7 @@
   </div>
 </form>
     <h6>if your done, click proceed</h6>
-    <a class="btn btn-outline-success" href="#" role="button">proceed</a>
+    <a class="btn btn-outline-success" href="learnpage" role="button">proceed</a>
     <div class="p-3 mb-2 bg-dark text-white">made with github</div>
     <div class="p-3 mb-2 bg-dark text-white">deployed with netlify</div>
     <div class="p-3 mb-2 bg-dark text-white">code reference from bootstrap</div>
