--- a/learnpage/index.html
+++ b/learnpage/index.html
@@ -33,7 +33,7 @@
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
     <h1 class="display-1">welcome to learn</h1>
-    <h6>this is where you could learn coding</h6>
+    <h6>this is where you could learn coding with languages such as word blocks, <p><abbr title="HyperText Markup Language" class="initialism">HTML</abbr></p>, and others.</h6>
     <div class="alert alert-success alert-dismissible fade show" role="alert">
   <strong>Hello! 👋</strong> nice to meet you! welcome to your new learning webpage.🤖🐱
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
