--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@ open tabs
         Dropdown button
       </button>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Action</a></li>
-        <li><a class="dropdown-item" href="#">Another action</a></li>
-        <li><a class="dropdown-item" href="#">Something else here</a></li>
+        <li><a class="dropdown-item" href="#">sign in</a></li>
+        <li><a class="dropdown-item" href="#"></a>contact us</li>
+        <li><a class="dropdown-item" href="#"><blank>:(</blank></a></li>
       </ul>
     </div>
     <h6>-</h6>
