--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ open tabs
         Dropdown button
       </button>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">sign in</a></li>
-        <li><a class="dropdown-item" href="#"></a>contact us</li>
+        <li><a class="dropdown-item" href="learn">sign in</a></li>
+        <li><a class="dropdown-item" href="https://scratch.mit.edu/users/kelaskaryabersama"></a>contact us</li>
         <li><a class="dropdown-item" href="#"><blank>:(</blank></a></li>
       </ul>
     </div>
