--- a/learnpage/hypertextmarkuplanguage/index.html
+++ b/learnpage/hypertextmarkuplanguage/index.html
@@ -83,6 +83,7 @@
       <h4>Buttons</h4>
       <h6>here are the code for your responsive <code>Link_href="#"</code> button</h6>
       <h6>put your link in <code>href="</code>here<code>"</code></h6>
+      <a class="btn btn-primary" href="#" role="button">Link</a>
       <h6><code>&lt;a class="btn btn-primary" href="#" role="button"&gt;Link&lt;/a&gt;</code></h6>
       <h4>text</h4>
       <h6><code>&lt;h1&gt;your text here&lt;h1&gt;</code></h6>
