--- a/learnpage/hypertextmarkuplanguage/index.html
+++ b/learnpage/hypertextmarkuplanguage/index.html
@@ -56,12 +56,9 @@
     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
   </li>
 </ul>
-      <h1 type="display-1">HTML basics</h1>
-      <h6>let's get started</h6>
-      <h5>must-use <mark>OR IT WILL BE 404 not found</mark></h5>
       <h6><code></h6>
       <nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#">html basics</a>
   <ul class="nav nav-pills">
     <li class="nav-item">
       <a class="nav-link" href="#scrollspyHeading1">basic</a>
