--- a/learnpage/hypertextmarkuplanguage/index.html
+++ b/learnpage/hypertextmarkuplanguage/index.html
@@ -70,7 +70,7 @@
       <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dropdown</a>
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="#scrollspyHeading3">button</a></li>
-        <li><a class="dropdown-item" href="#scrollspyHeading4">Fourth</a></li>
+        <li><a class="dropdown-item" href="#scrollspyHeading4">image</a></li>
       </ul>
     </li>
   </ul>
@@ -115,8 +115,11 @@
       <h6>put your link in <code>href="</code>here<code>"</code></h6>
       <a class="btn btn-primary" href="#" role="button">Link</a>
       <h6><code>&lt;a class="btn btn-primary" href="#" role="button"&gt;Link&lt;/a&gt;</code></h6></p>
-  <h4 id="scrollspyHeading4">fourth heading</h4>
-  <p>...</p>
+  <h4 id="scrollspyHeading4">image</h4>
+  <img src="github.png" class="img-fluid" alt="github">
+  <p>here  is the code to insert image:</p>
+  <p><code>&lt;img src="..." class="img-fluid" alt="..."&gt;</code></p>
+  <p>put the file name on alt and src, but you have to add file type after the name in src (like github .png)</p>
 </div>
     <div class="p-3 mb-2 bg-dark text-emphasis-dark"></div>
     <div class="p-3 mb-2 bg-dark text-emphasis-dark"></div>
