--- a/learnpage/hypertextmarkuplanguage/index.html
+++ b/learnpage/hypertextmarkuplanguage/index.html
@@ -72,6 +72,9 @@
         <li><a class="dropdown-item" href="#scrollspyHeading3">button</a></li>
         <li><a class="dropdown-item" href="#scrollspyHeading4">image</a></li>
       </ul>
+          <li class="nav-item">
+      <a class="nav-link" href="#scrollspyHeading5">alerts</a>
+    </li>
     </li>
   </ul>
 </nav>
@@ -120,6 +123,16 @@
   <p>here  is the code to insert image:</p>
   <p><code>&lt;img src="..." class="img-fluid" alt="..."&gt;</code></p>
   <p>put the file name on alt and src, but you have to add file type after the name in src (like github .png)</p>
+    <h4 id="scrollspyHeading5">alerts</h4>
+  <div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+  <p>here  is the code to add alert:</p>
+  <p><code>&lt;div class="alert alert-warning alert-dismissible fade show" role="alert"&gt;
+  &lt;strong&gt;Holy guacamole!&lt/strong&gt; You should check in on some of those fields below.
+  &lt;button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"&lt;/button&gt;
+&lt;/div&gt;</code></p>
 </div>
     <div class="p-3 mb-2 bg-dark text-emphasis-dark"></div>
     <div class="p-3 mb-2 bg-dark text-emphasis-dark"></div>
