--- a/dark/index.html
+++ b/dark/index.html
@@ -67,7 +67,7 @@
 </div>
     <h1>Welcome to Kelaskaryabersama</h1>
     <h5>learning sites</h5>
-<button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+<button class="btn btn-success" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
 open tabs
 </button>
 <button type="button" class="btn btn-lg btn-success" data-bs-toggle="popover" data-bs-title="Popover title" data-bs-content="Welcome to reccomendatins wall!">messages <span class="badge text-bg-primary">1</span></button>
@@ -87,7 +87,7 @@ open tabs
     kelaskaryabersama.com
     </div>
     <div class="dropdown mt-3">
-      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
+      <button class="btn btn-danger dropdown-toggle" type="button" data-bs-toggle="dropdown">
         Dropdown button
       </button>
       <ul class="dropdown-menu">
@@ -97,7 +97,7 @@ open tabs
       </ul>
     </div>
     <h6>-</h6>
-    <button type="button" class="btn btn-primary position-relative">
+    <button type="button" class="btn btn-success position-relative">
   messages
   <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
     10
@@ -135,7 +135,7 @@ open tabs
         <img src="scratch.png" class="img-thumbnail" alt="scratch">
         <h5 class="card-title">Scratch</h5>
         <p class="card-text">imagine, program, share with world's biggest free open source coding platform for kids.</p>
-        <a href="https://scratch.mit.edu" class="btn btn-primary">Open</a>
+        <a href="https://scratch.mit.edu" class="btn btn-success">Open</a>
       </div>
     </div>
   </div>
@@ -146,7 +146,7 @@ open tabs
         <img src="github.png" class="img-thumbnail" alt="github">
         <h5 class="card-title">Github</h5>
         <p class="card-text">code with world's most used codes, like HTML, Java, C, and PHP.</p>
-        <a href="https://github.com" class="btn btn-primary">open</a>
+        <a href="https://github.com" class="btn btn-success">open</a>
       </div>
     </div>
   </div>
@@ -159,7 +159,7 @@ open tabs
         <img src="bootstrap.png" class="img-thumbnail" alt="bootstrap">
         <h5 class="card-title">Bootstrap</h5>
         <p class="card-text">Build fast, responsive sites with bootstrap.</p>
-        <a href="https://getbootstrap.com" class="btn btn-primary">Open</a>
+        <a href="https://getbootstrap.com" class="btn btn-success">Open</a>
       </div>
     </div>
   </div>
@@ -170,7 +170,7 @@ open tabs
         <img src="netlify.png" class="img-thumbnail" alt="netlify">
         <h5 class="card-title">netlify</h5>
         <p class="card-text">deploy and publish sites with netlify.</p>
-        <a href="https://netlify.app" class="btn btn-primary">open</a>
+        <a href="https://netlify.app" class="btn btn-success">open</a>
       </div>
     </div>
   </div>
@@ -184,7 +184,7 @@ open tabs
         <img src="ixl.png" class="img-thumbnail" alt="ixl">
         <h5 class="card-title">ixl</h5>
         <p class="card-text">learn maths, language arts, science, and social studies with ixl.</p>
-        <a href="https://ixl.com" class="btn btn-primary">Open</a>
+        <a href="https://ixl.com" class="btn btn-success">Open</a>
       </div>
     </div>
   </div>
@@ -195,7 +195,7 @@ open tabs
         <img src="abcya.jpg" class="img-thumbnail" alt="abcya">
         <h5 class="card-title">ABCya</h5>
         <p class="card-text">play fun educational games in abcya.</p>
-        <a href="https://abcya.com" class="btn btn-primary">open</a>
+        <a href="https://abcya.com" class="btn btn-success">open</a>
       </div>
     </div>
   </div>
