--- a/dark/log-in/index.html
+++ b/dark/log-in/index.html
@@ -127,9 +127,8 @@
   <div class="col-12">
     <button type="submit" class="btn btn-primary" href="#" >Sign in</button>
   </div>
-    <a class="btn btn-outline-success" href="https://kelaskaryabersama.netlify.app/learnpage" role="button">submit</a>
+    <a class="btn btn-outline-success" href="https://kelaskaryabersama.netlify.app/dark/learn" role="button">submit</a>
 </form>
-    <a class="btn btn-outline-success" href="https://kelaskaryabersama.netlify.app/learnpage" role="button">proceed</a>
     <div class="p-3 mb-2 bg-dark text-white">made with github</div>
     <div class="p-3 mb-2 bg-dark text-white">deployed with netlify</div>
     <div class="p-3 mb-2 bg-dark text-white">code reference from bootstrap</div>
