--- a/dark/learn/index.html
+++ b/dark/learn/index.html
@@ -43,7 +43,7 @@
     <a class="nav-link active" aria-current="page" href="#">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="hypertextmarkuplanguage">HTML</a>
+    <a class="nav-link" href="hypertext-dark">HTML</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#">Scratch</a>
