--- a/dark/learn/hypertext-dark/index.html
+++ b/dark/learn/hypertext-dark/index.html
@@ -40,7 +40,7 @@
 </div>
     <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link" href="https://kelaskaryabersama.netlify.app/learnpage">home</a>
+    <a class="nav-link" href="https://kelaskaryabersama.netlify.app/dark/learn">home</a>
   </li>
     <ul class="nav nav-tabs">
   <li class="nav-item">
